--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <body background="Background.jpg">
         <center>
             <h1 class="btn btn-success header">Object Detection</h1>
-            <br><br><br><br><br><br>
-                <li class="link" id="Object1"><a href="">Rubix Cube</a></li>
-                <li class="link" id="Object2"><a href="">Bluetooth Device</a></li>
-                <li class="link" id="Object3"><a href="">Cup</a></li>
-                <li class="link" id="Object4"><a href="">Book</a></li>
-                <li class="link" id="Object5"><a href="">Sun Glass</a></li>
+                <br><br>
+                <li class="link" id="Object1"><a href="Cube.html">Rubix Cube</a></li>
+                <br><br>
+                <li class="link" id="Object2"><a href="bluetooth.html">Bluetooth Device</a></li>
+                <br><br>
+                <li class="link" id="Object3"><a href="cup.html">Cup</a></li>
+                <br><br>
+                <li class="link" id="Object4"><a href="book.html">Book</a></li>
+                <br><br>
+                <li class="link" id="Object5"><a href="glass.html">Sun Glass</a></li>
+                <br><br>
         </center>
     </body>
     </html>
